--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -1,3 +1,8 @@
+html,
+body {
+  margin: 0;
+}
+
 .workout-container {
   margin-top: 60px;
   margin-bottom: 60px;
@@ -6,8 +11,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto;          /* scroll verticale */
-  overflow-x: hidden;        /* niente scroll orizzontale */
+  overflow-y: auto; /* scroll verticale */
+  overflow-x: hidden; /* niente scroll orizzontale */
   height: calc(100vh - 120px);
 }
 
@@ -19,6 +24,7 @@
   padding: 12px 16px;
   gap: 16px;
   width: 100%;
+  margin-bottom: 10px;
   box-sizing: border-box;
   scrollbar-width: none;
   perspective: 800px; /* importante per il 3D */
@@ -38,25 +44,25 @@
   border-bottom: 2px solid transparent;
   cursor: pointer;
   user-select: none;
-  transition: transform 0.3s ease, color 0.3s ease, border-bottom-color 0.3s ease;
+  transition: transform 0.3s ease, color 0.3s ease,
+    border-bottom-color 0.3s ease;
   transform-style: preserve-3d;
   will-change: transform;
 }
 
 .month-label.active {
   color: #fff;
-  border-bottom: 2px solid #FFD700;
+  border-bottom: 2px solid #ffd700;
   font-weight: bold;
   /* Effetto 3D tipo “pop-out” con leggera rotazione */
   transform: perspective(800px) rotateY(10deg) scale(1.2);
   z-index: 10; /* sopra agli altri */
 }
 
-
 /* Griglia giorni */
 .day-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr)); /* larghezza fissa per mobile */
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
   gap: 14px;
   width: 100%;
   margin-top: 20px;
@@ -64,8 +70,8 @@
 }
 
 .day-card {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-color: white;
   background-size: contain;
   background-repeat: no-repeat;
@@ -91,7 +97,7 @@
 .day-card.selected {
   transform: scale(0.95);
   box-shadow: 0 1px 8px rgba(255, 215, 0, 0.8);
-  border: 2px solid #FFD700;
+  border: 2px solid #ffd700;
 }
 
 /* Dettagli visibili solo se aperti */
@@ -104,8 +110,9 @@
 
 .detail-card {
   background-color: #111;
-  border: 1px solid #FFD700;
+  border: 1px solid #ffd700;
   border-radius: 16px;
+  height: 400px;
   padding: 20px;
   color: white;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.15);
@@ -113,13 +120,15 @@
 
 .detail-card h3 {
   margin-bottom: 10px;
-  color: #FFD700;
+  color: #ffd700;
+  text-align: center;
 }
 
 .detail-card ul {
   padding-left: 18px;
   list-style: disc;
   margin-top: 8px;
+  list-style: none;
 }
 
 /* Animazioni */
