--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Barra fissa gialla -->
-<div class="top-bar"></div>
+<div class="top-bar"><div class="title"><p class="g">G</p><p class="name-e">EXCLUSIVE</p></div></div>
 
 
 <div class="bottom-bar">
