modifiche di stile

--- a/src/app/components/work-out/work-out.component.html
+++ b/src/app/components/work-out/work-out.component.html
@@ -11,17 +11,7 @@
     </div>
   </div>
 
-  <div
-    class="day-grid"
-    style="
-      display: flex;
-      gap: 12px;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      justify-content: center;
-    "
-  >
-    >
+  <div class="day-grid">
 
     <div
       *ngFor="let muscleGroup of fixedMuscleGroups; let i = index"
