--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -1,6 +1,7 @@
 html,
 body {
   margin: 0;
+    overflow: hidden;
 }
 
 .workout-container {
@@ -11,8 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto; /* scroll verticale */
-  overflow-x: hidden; /* niente scroll orizzontale */
+  overflow: hidden;
   height: calc(100vh - 120px);
 }
 
@@ -59,12 +59,13 @@ body {
 }
 
 /* Griglia giorni */
-.muscle-groups-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+.day-grid {
+  display: flex;
+justify-content: center;
   width: 100%;
   margin-top: 20px;
   box-sizing: border-box;
+  gap: 10px;
 }
 
 .day-card {
@@ -111,7 +112,7 @@ body {
   background-color: #111;
   border: 1px solid #ffd700;
   border-radius: 16px;
-  height: 400px;
+  height: 300px;
   padding: 20px;
   color: white;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.15);
@@ -124,7 +125,7 @@ body {
 }
 
 .detail-card ul {
-  padding-left: 18px;
+  padding-left: 10px;
   list-style: disc;
   margin-top: 8px;
   list-style: none;
@@ -137,11 +138,13 @@ body {
   flex-wrap: wrap;
   color: white;
   padding: 5px;
+    font-size: 1rem;
 }
 
 .exercise-name {
   flex: 1;
   font-weight: bold;
+  font-size: 0.8rem;
 }
 
 .exercise-sets,
@@ -151,6 +154,7 @@ body {
   border-radius: 4px;
   background-color: transparent;
   font-weight: 600;
+  font-size: 0.7rem;
   min-width: 30px;
   text-align: center;
 }
@@ -164,7 +168,7 @@ body {
 .workout-name {
   margin-left: auto;
   font-style: italic;
-  font-size: 0.9em;
+  font-size: 0.8em;
   color: #ffd700;
 }
 
