--- a/src/app/components/work-out/work-out.component.html
+++ b/src/app/components/work-out/work-out.component.html
@@ -56,5 +56,8 @@
         <p>Nessun esercizio disponibile per questo gruppo muscolare.</p>
       </div>
     </div>
+      <button class="avvia">Avvia</button>
   </div>
+
+
 </div>
