--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -140,7 +140,7 @@ html, body {
   background-color: black;
   text-decoration: none;
   padding: 14px 28px;
-  border: 1px solid white;
+  border: 1px solid rgb(255, 196, 0);
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
   cursor: pointer;
