--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -172,6 +172,22 @@ justify-content: center;
   color: #ffd700;
 }
 
+.avvia{
+  background-color: #ffd700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  margin-left: 130px;
+  border: 1px solid white;
+  border-radius: 10px;
+  color: black;
+  padding: 10px;
+  width: 100px;
+  box-shadow: 0 2px 8px rgba(255, 215, 0, 0.3);
+
+}
+
 
 
 /* Animazioni */
