--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -112,7 +112,7 @@ justify-content: center;
   background-color: #111;
   border: 1px solid #ffd700;
   border-radius: 16px;
-  height: 300px;
+  height: 350px;
   padding: 20px;
   color: white;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.15);
@@ -178,16 +178,30 @@ justify-content: center;
   justify-content: center;
   align-items: center;
   margin: 20px;
-  margin-left: 130px;
+  margin-left: 110px;
   border: 1px solid white;
   border-radius: 10px;
   color: black;
   padding: 10px;
-  width: 100px;
+  width: 150px;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.3);
 
 }
 
+.exercise-weight {
+  display: inline-block;
+}
+.exercise-weight input {
+  border: 1px solid rgb(255, 196, 2);
+  padding: 4px 8px;
+  border-radius: 4px;
+  background-color: transparent;
+  font-weight: 600;
+  font-size: 0.7rem;
+  width: 30px;
+  text-align: center;
+  color: white;
+}
 
 
 /* Animazioni */
