--- a/src/app/components/show-progress/show-progress.component.html
+++ b/src/app/components/show-progress/show-progress.component.html
@@ -1,22 +1,27 @@
 <div class="progress-wrapper">
   <div *ngIf="eserciziUnici.length > 0; else noData">
     <label for="esercizio-select" class="dropdown-label">Seleziona un esercizio:</label>
-    <select id="esercizio-select" [(ngModel)]="esercizioSelezionato" class="dropdown-select">
+    <select
+      id="esercizio-select"
+      [(ngModel)]="esercizioSelezionato"
+      (change)="onExerciseChange()"
+      class="dropdown-select"
+    >
       <option *ngFor="let esercizio of eserciziUnici" [value]="esercizio">
         {{ esercizio }}
       </option>
     </select>
 
-    <div class="progress-container" *ngIf="getProgressiFiltrati().length > 0">
+    <div class="chart-container" *ngIf="getProgressiFiltrati().length > 0">
       <h3 class="progress-title">Progressi per: {{ esercizioSelezionato }}</h3>
-      <ul>
-        <li *ngFor="let item of getProgressiFiltrati()" class="progress-item">
-          <div class="progress-info">
-            <span class="weight-used">{{ item.weight_used }} kg</span>
-            <span class="date">{{ item.created_at | date:'short' }}</span>
-          </div>
-        </li>
-      </ul>
+      <div class="card">
+        <p-chart
+          type="line"
+          [data]="chartData"
+          [options]="chartOptions"
+          class="h-[30rem]"
+        ></p-chart>
+      </div>
     </div>
 
     <div *ngIf="getProgressiFiltrati().length === 0" class="no-progress">
