--- a/src/app/components/show-progress/show-progress.component.css
+++ b/src/app/components/show-progress/show-progress.component.css
@@ -14,17 +14,39 @@
   font-weight: bold;
   color: white;
 }
+.dropdown-filter {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  width: 60%;
+}
+
 
 .dropdown-select {
   width: 60%;
-  padding: 10px;
+  padding: 5px 10px;
   border-radius: 8px;
   border: 1px solid #ffd700;
   background-color: #111;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 20px;
+  height: 30px;
+  line-height: 20px;
+  box-sizing: border-box;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
+
+
+.dropdown-select option {
+    padding: 10px;
+    line-height: 15px;
+    height: 100px;
+    font-size: 10px;
+    margin: 20px;
+}
+
 
 /* Lista progressi */
 .progress-container {
