--- a/src/app/components/show-progress/show-progress.component.html
+++ b/src/app/components/show-progress/show-progress.component.html
@@ -1,35 +1,41 @@
 <div class="progress-wrapper">
-  <div *ngIf="eserciziUnici.length > 0; else noData">
-    <label for="esercizio-select" class="dropdown-label">Seleziona un esercizio:</label>
-    <select
-      id="esercizio-select"
-      [(ngModel)]="esercizioSelezionato"
-      (change)="onExerciseChange()"
-      class="dropdown-select"
-    >
-      <option *ngFor="let esercizio of eserciziUnici" [value]="esercizio">
-        {{ esercizio }}
-      </option>
-    </select>
+<div *ngIf="eserciziUnici.length > 0; else noData">
+  <label class="dropdown-label">Seleziona un esercizio:</label>
 
-    <div class="chart-container" *ngIf="getProgressiFiltrati().length > 0">
-      <h3 class="progress-title">Progressi per: {{ esercizioSelezionato }}</h3>
-      <div class="card">
-        <p-chart
-          type="line"
-          [data]="chartData"
-          [options]="chartOptions"
-          class="h-[30rem]"
-        ></p-chart>
-      </div>
+  <div class="custom-dropdown" [class.open]="isDropdownOpen">
+    <div class="dropdown-selected" (click)="toggleDropdown()">
+      <span>{{ esercizioSelezionato || 'Seleziona un esercizio' }}</span>
+      <div class="dropdown-arrow"></div>
     </div>
 
-    <div *ngIf="getProgressiFiltrati().length === 0" class="no-progress">
-      <p>Nessun progresso registrato per questo esercizio.</p>
+    <div class="dropdown-options" *ngIf="isDropdownOpen">
+      <div
+        class="dropdown-option"
+        *ngFor="let esercizio of eserciziUnici"
+        [class.selected]="esercizio === esercizioSelezionato"
+        (click)="selectExercise(esercizio)">
+        {{ esercizio }}
+      </div>
     </div>
   </div>
 
+  <div class="chart-container" *ngIf="getProgressiFiltrati().length > 0">
+    <h3 class="progress-title">Progressi per: {{ esercizioSelezionato }}</h3>
+    <div class="card">
+      <p-chart
+        type="line"
+        [data]="chartData"
+        [options]="chartOptions"
+        class="h-[30rem]">
+      </p-chart>
+    </div>
+  </div>
+
+  <div *ngIf="getProgressiFiltrati().length === 0" class="no-progress">
+    <p>Nessun progresso registrato per questo esercizio.</p>
+  </div>
+</div>
+</div>
   <ng-template #noData>
     <p class="no-progress">Nessun progresso disponibile.</p>
   </ng-template>
-</div>
