--- a/src/app/components/show-progress/show-progress.component.html
+++ b/src/app/components/show-progress/show-progress.component.html
@@ -26,7 +26,9 @@
         type="line"
         [data]="chartData"
         [options]="chartOptions"
+         [style]="{'height': '500px'}"
         class="h-[30rem]">
+
       </p-chart>
     </div>
   </div>
