--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  height: calc(100vh - 120px);
+   height: calc(var(--vh, 1vh) * 100 - 120px);
 }
 
 .month-wrapper {
