--- a/src/app/components/work-out/work-out.component.html
+++ b/src/app/components/work-out/work-out.component.html
@@ -1,4 +1,5 @@
 <div class="workout-container">
+  <!-- Month carousel -->
   <div class="month-wrapper" #monthScroll>
     <div
       *ngFor="let month of months; let i = index"
@@ -11,6 +12,7 @@
     </div>
   </div>
 
+  <!-- Day selector -->
   <div class="day-grid">
     <div
       *ngFor="let muscleGroup of fixedMuscleGroups; let i = index"
@@ -21,50 +23,51 @@
     ></div>
   </div>
 
+  <!-- Dettagli e lista esercizi -->
   <div class="day-details" *ngIf="openedDay !== null">
     <div class="detail-card">
-      <div
-        class="exercises-list"
-        *ngIf="selectedMuscleGroupExercises.length > 0"
-      >
-        <h4>SCHEDA ALLENAMENTO:</h4>
-        <ul>
-          <li
-            *ngFor="let exercise of selectedMuscleGroupExercises; let i = index"
-            class="exercise-item"
-          >
-            <div class="exercise-info">
-              <span class="exercise-name">{{ exercise.name }}</span>
-              <span class="exercise-sets">{{ exercise.sets }}</span>
-              <span class="exercise-mult">x</span>
-              <span class="exercise-reps">{{ exercise.reps }}</span>
-              <span class="exercise-weight">
-                <input
-                 #weightInput
-                  type="number"
-                  placeholder="kg"
-                  [(ngModel)]="exerciseWeights[exercise.id]"
-                  (change)="saveWeight(exercise.id)"
+      <!-- Scroll wrapper per la lista esercizi -->
+      <div class="inner-list">
+        <div *ngIf="selectedMuscleGroupExercises.length > 0" class="exercises-list">
+          <h4>SCHEDA ALLENAMENTO:</h4>
+          <ul>
+            <li
+              *ngFor="let exercise of selectedMuscleGroupExercises; let idx = index"
+              class="exercise-item"
+            >
+              <div class="exercise-info">
+                <span class="exercise-name">{{ exercise.name }}</span>
+                <span class="exercise-sets">{{ exercise.sets }}</span>
+                <span class="exercise-mult">x</span>
+                <span class="exercise-reps">{{ exercise.reps }}</span>
+                <span class="exercise-weight">
+                  <input
+                    #weightInput
+                    type="number"
+                    placeholder="kg"
+                    [(ngModel)]="exerciseWeights[exercise.id]"
+                    (change)="saveWeight(exercise.id)"
                     (blur)="onInputBlur($event)"
-                />
-              </span>
-              <span class="workout-name" *ngIf="exercise.workouts?.name">
-                Workout: {{ exercise.workouts.name }}
-              </span>
-            </div>
-          </li>
-        </ul>
+                  />
+                </span>
+                <span class="workout-name" *ngIf="exercise.workouts?.name">
+                  Workout: {{ exercise.workouts.name }}
+                </span>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div *ngIf="selectedMuscleGroupExercises.length === 0" class="no-exercises">
+          <p>Nessun esercizio disponibile per questo gruppo muscolare.</p>
+        </div>
       </div>
 
-      <!-- Messaggio se non ci sono esercizi -->
-      <div
-        class="no-exercises"
-        *ngIf="selectedMuscleGroupExercises.length === 0"
-      >
-        <p>Nessun esercizio disponibile per questo gruppo muscolare.</p>
-      </div>
+      <!-- Pulsante salva -->
+
     </div>
-   <button class="avvia" (click)="saveAllProgress()">Salva progressi</button>
 
+       <button class="avvia" (click)="saveAllProgress()">
+        Salva progressi
+      </button>
   </div>
 </div>
