--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -130,22 +130,25 @@ html, body {
 }
 
 .menu-content li {
-  color: white;
-  font-size: 0.9rem;
-  font-weight: 500;
+  all: unset;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  background-color: black;
-  text-decoration: none;
-  padding: 14px 28px;
-  border: 1px solid rgb(255, 196, 0);
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
+  width: 280px;
+  margin: 0 auto;
+  padding: 14px 23px;
+  background-color: #121212;
+  color: rgb(255, 196, 0);
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 14px;
+  box-shadow: 0 0 12px rgb(255, 196, 0, 0.7);
   cursor: pointer;
-  margin-bottom: 12px;
   user-select: none;
   touch-action: manipulation;
+  transition: box-shadow 0.2s ease;
 }
-
+.menu-content li:active {
+  box-shadow: 0 0 24px rgb(255, 196, 0, 1);
+  transform: scale(0.97);
+}
