--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -84,7 +84,6 @@ justify-content: center;
 .day-card {
   width: 50px;
   height: 50px;
-  margin-top: 10px;
   background-color: white;
   background-size: contain;
   background-repeat: no-repeat;
@@ -115,7 +114,7 @@ justify-content: center;
 
 /* Dettagli visibili solo se aperti */
 .day-details {
-  margin-top: 24px;
+  margin-top: 20px;
   width: 100%;
   animation: fadeIn 0.25s ease-in-out;
   box-sizing: border-box;
@@ -125,8 +124,8 @@ justify-content: center;
   background-color: #111;
   border: 1px solid #ffd700;
   border-radius: 16px;
-  height: 350px;
-  padding: 20px;
+  height: 400px;
+  padding: 10px;
   color: white;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.15);
 }
@@ -190,7 +189,7 @@ justify-content: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px auto; /* auto per centramento orizzontale */
+  margin: 40px auto;
   border: 1px solid white;
   border-radius: 10px;
   color: black;
@@ -198,7 +197,7 @@ justify-content: center;
   width: 150px;
   box-shadow: 0 2px 8px rgba(255, 215, 0, 0.3);
   position: relative;
-  z-index: 1; /* sopra tutto */
+  z-index: 1;
 }
 
 .exercise-weight {
@@ -217,6 +216,55 @@ justify-content: center;
   -webkit-text-size-adjust: 100%;
     touch-action: manipulation;
 }
+.timer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 25px auto;
+  padding: 6px 10px;
+  width: 300px;
+}
+
+.timer-container h4 {
+  margin: 0 0 6px 0;
+  font-size: 0.9rem;
+  color: #ffd700;
+  text-align: center;
+}
+
+.timer-row {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.timer-display {
+  font-size: 1.5rem;
+  padding:0.8rem;
+  font-weight: 700;
+  color: #ffd700;
+}
+
+.timer-container button {
+  font-size: 0.9rem;
+  padding: 4px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: #ffd700;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timer-container button i.pi {
+  font-size: 0.7rem;
+  color: #000;
+}
+
 
 
 /* Animazioni */
