--- a/src/app/components/work-out/work-out.component.html
+++ b/src/app/components/work-out/work-out.component.html
@@ -28,11 +28,17 @@
     <div class="detail-card">
       <!-- Scroll wrapper per la lista esercizi -->
       <div class="inner-list">
-        <div *ngIf="selectedMuscleGroupExercises.length > 0" class="exercises-list">
+        <div
+          *ngIf="selectedMuscleGroupExercises.length > 0"
+          class="exercises-list"
+        >
           <h4>SCHEDA ALLENAMENTO:</h4>
           <ul>
             <li
-              *ngFor="let exercise of selectedMuscleGroupExercises; let idx = index"
+              *ngFor="
+                let exercise of selectedMuscleGroupExercises;
+                let idx = index
+              "
               class="exercise-item"
             >
               <div class="exercise-info">
@@ -56,18 +62,50 @@
               </div>
             </li>
           </ul>
+          <div class="timer-container">
+            <h4>Cronometro pausa:</h4>
+            <div class="timer-row">
+              <div class="timer-display">{{ displayTime }}</div>
+
+              <button
+                (click)="startTimer()"
+                [disabled]="timerRunning"
+                aria-label="Start"
+                class="p-button p-button-text"
+              >
+                <i class="pi pi-play"></i>
+              </button>
+
+              <button
+                (click)="pauseTimer()"
+                [disabled]="!timerRunning"
+                aria-label="Pause"
+                class="p-button p-button-text"
+              >
+                <i class="pi pi-pause"></i>
+              </button>
+
+              <button
+                (click)="resetTimer()"
+                aria-label="Reset"
+                class="p-button p-button-text"
+              >
+                <i class="pi pi-refresh"></i>
+              </button>
+            </div>
+          </div>
+          <div
+            *ngIf="selectedMuscleGroupExercises.length === 0"
+            class="no-exercises"
+          >
+            <p>Nessun esercizio disponibile per questo gruppo muscolare.</p>
+          </div>
         </div>
-        <div *ngIf="selectedMuscleGroupExercises.length === 0" class="no-exercises">
-          <p>Nessun esercizio disponibile per questo gruppo muscolare.</p>
-        </div>
+
+        <!-- Pulsante salva -->
       </div>
 
-      <!-- Pulsante salva -->
-
+      <button class="avvia" (click)="saveAllProgress()">Salva progressi</button>
     </div>
-
-       <button class="avvia" (click)="saveAllProgress()">
-        Salva progressi
-      </button>
   </div>
 </div>
