--- a/src/app/components/work-out/work-out.component.css
+++ b/src/app/components/work-out/work-out.component.css
@@ -24,6 +24,7 @@ body {
 
 .inner-list {
   flex: 1;
+  line-height: 0.6rem;
   width: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -114,7 +115,7 @@ justify-content: center;
 
 /* Dettagli visibili solo se aperti */
 .day-details {
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
   animation: fadeIn 0.25s ease-in-out;
   box-sizing: border-box;
@@ -137,6 +138,7 @@ justify-content: center;
 }
 
 .detail-card ul {
+  padding-left: 10px;
   list-style: disc;
   margin-top: 2px;
   list-style: none;
@@ -145,17 +147,17 @@ justify-content: center;
 .exercise-info {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 16px;
   flex-wrap: wrap;
   color: white;
-  padding: 3px;
-    font-size: 0.9rem;
+  padding: 5px;
+    font-size: 1rem;
 }
 
 .exercise-name {
   flex: 1;
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .exercise-sets,
